# for-review

./: Cargo.toml  README.md
src/: main.rs
src/domain/: mod.rs
src/domain/aggregates/: mod.rs  student.rs
src/domain/entities/: cardset.rs  event.rs  mod.rs  schedule.rs
src/domain/values/: color.rs  email.rs  flashcard.rs  mod.rs  password.rs  subject.rs  uuid.rs
src/infrastructure/: mod.rs  repository.rs
src/presentation/: mod.rs
src/presentation/routes/: home.rs  mod.rs
src/presentation/routes/dashboard/: app.rs  mod.rs  user.rs
src/presentation/templates/: mod.rs
src/presentation/templates/component/: nav.html
src/presentation/templates/js/controllers/: app.js  calendar_controller.js  navbar_controller.js
src/presentation/templates/layout/: base.html
src/presentation/templates/page/: app.html  login.html
src/presentation/templates/partial/: calendar.html  cards.html  dashboard.html  schedule.html
src/presentation/templates/style/: _reset.scss  _root.scss  _theme.scss  style.scss
src/presentation/templates/style/components/: _calendar.scss  _cards.scss  _dashboard.scss  _nav.scss  _schedule.scss
src/presentation/templates/style/components/dashboard/: _calendar.scss
