[package]
name = "for-review"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", default-features = false, features = ["form", "http2", "query", "tokio"] }

chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = { version = "0.10.1", default-features = false, features = ["serde", "std"] }

serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive", "std"] }
native_db = { version = "0.8.1", default-features = false }
native_model = { version = "0.4.20", default-features = false }

once_cell = "1.20.2"
indexmap = { version = "2.7.1", default-features = false, features = ["serde", "std"] }

rand = "0.8.5"
bcrypt = "0.16.0"

regex = "1.11.1"
regex_static = "0.1.1"
