[package]
name = "for-review"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
axum = { version = "0.8.1", features = ["form", "http2", "query", "tokio", "matched-path", "macros"] }

chrono = { version = "0.4.39", default-features = false, features = ["clock", "serde", "std"] }
chrono-tz = { version = "0.10.1", default-features = false, features = ["serde", "std"] }

serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive", "std"] }
native_db = { version = "0.8.1", default-features = false }
native_model = { version = "0.4.20", default-features = false }

once_cell = "1.20.2"

rand = "0.8.5"
bcrypt = "0.16.0"

regex = "1.11.1"
regex_static = "0.1.1"

thiserror = { version = "2.0.11", default-features = false, features = ["std"] }
lazy_static = "1.5.0"

arrayvec = { version = "0.7.6", default-features = false, features = ["serde", "std"] }
smol_str = { version = "0.3.2", default-features = false, features = ["serde", "std"] }
vecmap-rs = { version = "0.2.3", features = ["serde"] }

grass = { version = "0.13.4", default-features = false, features = ["macro", "random"] }
tera = "1.20.0"
axum-login = "0.17.0"
time = "0.3.37"
async-trait = "0.1.86"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["fs"] }
tower = { version = "0.5.2", features = ["util"] }

[profile.dev.package."*"]
opt-level = 3
strip = "debuginfo"
codegen-units = 1
incremental = true

[profile.dev]
lto = false
opt-level = 0
panic = "abort"
strip = "debuginfo"
incremental = true
# codegen-units = 256
